syntax = "proto3";

option go_package = "array";

import "bitmap.proto";

message Array32 {
    // compatibility guarantee:
    //     reserved field number: 1, 2, 3, 4
    //     reserved field name: Cnt, Bitmaps, Offsets, Elts
    //
    int32 Cnt               = 1; // current number of elts

    repeated uint64 Bitmaps = 2; // bitmaps[] about which index has elt
    repeated int32  Offsets = 3; // index offset in `elts` for bitmap[i]
    bytes  Elts             = 4;


    // Flags provides options
    //
    // Since 0.5.4
    uint32 Flags = 10;


    // EltWidth set width of elt in bits.
    //
    // Since 0.5.4
    int32 EltWidth = 20;


    // BMElts is optimized for elt itself is a bitmap.
    //
    // Since 0.5.4
    Bits BMElts = 30;


    // EltIndex is a bitmap in which a "1" indicate element start.
    // To get the start position of i-th element:
    //     s := EltIndex.Select(i)
    //
    // To get the end position of i-th element:
    //     e := EltIndex.Select(i+1)
    //
    // Since 0.5.10
    Bits EltIndex = 40;
}
